# asset-registry

./: .gitignore  AssetEntry.cpp  AssetEntry.h  AssetRef.cpp  AssetRef.h  CMakeLists.txt  CacheError.h  LICENSE  README.md  Registry.cpp  Registry.h  main.cpp  my_test.cpp
assets/: test.txt
game/: CMakeLists.txt  Player.cpp  Player.h  TextureCache.h  World.cpp  World.h  main.cpp
game/assets/shaders/: frustum.fsh
lib/: CMakeLists.txt  README.md
lib/include/: AssetEntry.h  AssetRef.h  CacheError.h  Registry.h
lib/src/: AssetEntry.cpp  AssetRef.cpp  Registry.cpp  main.cpp
tests/: AssetEntryTests.cpp  AssetRefTests.cpp  CMakeLists.txt  RegistryTests.cpp
